test/functions/promotion/issue-12736-error4.good
issue-12736-error4.chpl:8: error: illegal access of iterator or promoted expression
