test/functions/promotion/issue-12736-error4.chpl

record R {
  var foo = 1;
}

var a: [1..10] R;

writeln(a.foo());
